# Search-in-dictionary

./: .clang-format  CMakeLists.txt  README.md  build.sh  requirements.txt
dictionary/: CMakeLists.txt  install.sh  widget.cpp  widget.h  words.txt
include/: big_words.h  model.h  model_fwd.h  trie.h  view.h  view.ui
src/: big_words.cpp  main.cpp  model.cpp  trie.cpp  view.cpp
test/: CMakeLists.txt  test.cpp  test.h  test_big.cpp  test_small.cpp
